--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Treine me</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Mulish:ital,wght@0,200..1000;1,200..1000&family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -20,7 +23,7 @@
         </nav>
         <main>
             <section>
-                <h1>Treinos exclusivos para você!</h1>
+                <h1>Treinos <span>exclusivos</span> para você!</h1>
                 <p>Nós criamos treinos <strong>exclusivos e únicos para você.</strong><br>Invista no seu corpo e <strong>tenha muito mais performance</strong> e qualidade de vida.</p>
                 <button>
                     <img src="images/whats.svg" alt="Ícone do WhatsApp.">
