--- a/index.html
+++ b/index.html
@@ -34,6 +34,6 @@
         </main>
         <footer>fale concosco no instagram <a href="#">@treine.me</a></footer>
     </div>
-    <img src="images/balls.svg" alt="Bolinhas decorativas verder mo canto inferior direito.">
+    <img id="balls" src="images/balls.svg" alt="Bolinhas decorativas verder mo canto inferior direito.">
 </body>
 </html>
