--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <main>
             <section>
                 <h1>Treinos <span>exclusivos</span> para você!</h1>
-                <p>Nós criamos treinos <strong>exclusivos e únicos para você.</strong><br>Invista no seu corpo e <strong>tenha muito mais performance</strong> e qualidade de vida.</p>
+                <p>Nós criamos treinos <strong>exclusivos e únicos para você.</strong><br>Invista no seu corpo e <strong>tenha muito mais performance</strong> e <br>qualidade de vida.</p>
                 <button>
                     <img src="images/whats.svg" alt="Ícone do WhatsApp.">
                     Comece Já
